# mtl-trigger

./: CMakeLists.txt  MTLtask.cpp  MTLtask.h  com_trigger_task.cpp  com_trigger_task.h  controller.cpp  controller.h  digispark_trigger_task.cpp  digispark_trigger_task.h  keyvaluemodel.cpp  keyvaluemodel.h  linefilebrowse.cpp  linefilebrowse.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  status.cmake  task.cpp  task.h  task_property.cpp  task_property.h  togglebox.h
MTL/: MTL32Calls.def  MTL32Calls.lib  MTL32dllH.h
libusb/lib/msvc/: libusb.lib
libusb/lib/msvc_x64/: libusb.lib
